--- a/taskmanager/src/main/resources/application.properties
+++ b/taskmanager/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=taskmanager
-
+server.servlet.context-path=/taskmanager
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
